HelloUltraviolet/Fixtures/RejectedSource/Expressions/PtrNullCheck/Expected.uv
//! Expected diagnostic metadata for the PtrNullCheck rejected-source specimen.

expectedDiagnostic("E-TYP-1530", "rule.16.Chk-PtrNull-Err")
